infrastructure/node-main/ns-media/05-prowlarr/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: media
  labels:
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/part-of: media-stack
spec:
  ingressClassName: traefik
  rules:
    - host: prowlarr.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  name: http
